--- a/SchmoekelMission6/Views/Home/Movies.cshtml
+++ b/SchmoekelMission6/Views/Home/Movies.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SchmoekelMission6.Models.Submission
 
-<form asp-action="Submission" asp-controller="Home" method="post">
+<form method="post">
     <label asp-for="Title">Title:</label>
     <input type="text" asp-for="Title" required>
 
