--- a/SchmoekelMission6/Views/Home/Movies.cshtml
+++ b/SchmoekelMission6/Views/Home/Movies.cshtml
@@ -1,13 +1,25 @@
-﻿@model SchmoekelMission6.Models.Submission
+﻿@model SchmoekelMission6.Models.Movie
 
 <form method="post">
     <label asp-for="Title">Title:</label>
     <input type="text" asp-for="Title" required>
 
     <br>
+    
+    <input type="hidden" asp-for="MovieId">
 
-    <label asp-for="Genre">Genre:</label>
-    <input type="text" asp-for="Genre" required>
+    <br>
+
+    <label asp-for="CategoryId">Category:</label>
+    <input type="text" asp-for="CategoryId" required>
+
+    <select asp-for="CategoryId">
+        <option value="">Select a category</option>
+        @foreach (Category c in ViewBag.Categories)
+        {
+            <option value="@c.CategoryId"> @c.CategoryName</option>
+        }
+    </select>
 
     <br>
 
@@ -16,8 +28,8 @@
 
     <br>
 
-    <label asp-for="ReleaseYear">Release Year:</label>
-    <input type="text" asp-for="ReleaseYear" required>
+    <label asp-for="Year">Release Year:</label>
+    <input type="text" asp-for="Year" required>
 
     <br>
 
@@ -36,8 +48,8 @@
 
     <br>
 
-    <label asp-for="Notes">Notes:</label>
-    <input type="text" asp-for="Notes" maxlength="25">
+    <label asp-for="CopiedToPlex">Copied To Plex:</label>
+    <input type="text" asp-for="CopiedToPlex" maxlength="25">
 
     <br>
 
