--- a/SchmoekelMission6/Views/Home/Submission.cshtml
+++ b/SchmoekelMission6/Views/Home/Submission.cshtml
@@ -3,7 +3,7 @@
 *@
 @{
 }
-@model Submission
+@model Movie
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div style="text-align: center; margin-top: 50px;">
-        <h2>Submission Successful</h2>
-        <p>Thank you for adding <strong>@Model.Title</strong>,and for submitting the movie details. Your submission was successful!</p>
+        <h2>Movie Successful</h2>
+        <p>Thank you for adding <strong>@Model.Title</strong>,and for submitting the movie details. Your Movie was successful!</p>
 
         <!-- You can add more content or links here as needed -->
 
