--- a/SchmoekelMission6/Views/Home/Movies.cshtml
+++ b/SchmoekelMission6/Views/Home/Movies.cshtml
@@ -1,25 +1,13 @@
-﻿@model SchmoekelMission6.Models.Movie
+﻿@model SchmoekelMission6.Models.Submission
 
 <form method="post">
     <label asp-for="Title">Title:</label>
     <input type="text" asp-for="Title" required>
 
     <br>
-    
-    <input type="hidden" asp-for="MovieId">
 
-    <br>
-
-    <label asp-for="CategoryId">Category:</label>
-    <input type="text" asp-for="CategoryId" required>
-
-    <select asp-for="CategoryId">
-        <option value="">Select a category</option>
-        @foreach (Category c in ViewBag.Categories)
-        {
-            <option value="@c.CategoryId"> @c.CategoryName</option>
-        }
-    </select>
+    <label asp-for="Genre">Genre:</label>
+    <input type="text" asp-for="Genre" required>
 
     <br>
 
@@ -28,8 +16,8 @@
 
     <br>
 
-    <label asp-for="Year">Release Year:</label>
-    <input type="text" asp-for="Year" required>
+    <label asp-for="ReleaseYear">Release Year:</label>
+    <input type="text" asp-for="ReleaseYear" required>
 
     <br>
 
@@ -48,8 +36,8 @@
 
     <br>
 
-    <label asp-for="CopiedToPlex">Copied To Plex:</label>
-    <input type="text" asp-for="CopiedToPlex" maxlength="25">
+    <label asp-for="Notes">Notes:</label>
+    <input type="text" asp-for="Notes" maxlength="25">
 
     <br>
 
